# xmonad-log-applet

./: .gitignore  LICENSE  Makefile.in  configure  configure.ac  main.c  xmonad-log-applet.schema  xmonad-log-applet.server.in  xmonad-log-applet.spec
